--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,6 @@ end_of_line = lf
 insert_final_newline = true
 trim_trailing_whitespace = true
 
-[*.{js,jsx,ts,tsx}]
+[*.{js,jsx,ts,tsx,yml,yaml}]
 indent_style = space
 indent_size = 2
